Fix spacing

--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,5 +1,15 @@
+:root {
+  --primary-color: #008DDA;
+  --secondary-color: #41C9E2;
+  --accent-color: #ACE2E1;
+  --text-color-dark: #000;
+  --text-color-light: #fff;
+  --background-color: #F7EEDD;
+}
+
+
 body {
-  background-color: #a7a7a7;
+  background-color: var(--background-color);
   margin: 0;
   width: 100%;
   height: 100%;
@@ -7,7 +17,7 @@ body {
 
 a {
   text-decoration: none;
-  color: white;
+  color: var(--text-color-white);
 }
 
 * {
@@ -19,8 +29,20 @@ a {
 
 
 button {
-  background-color: white;
+  background-color: var(--accent-color);
+  color: var(--text-color-dark);
+  padding: 1rem;
+  letter-spacing: 0.3em;
+  border-radius: 0.25rem;
+  border: 1px solid var(--text-color-dark);
+}
+
+button:hover {
+  color: var(--text-color-light);
+  background-color: var(--background-color);
   padding: 1rem;
   border-radius: 0.25rem;
   border: 1px solid black;
 }
+
+
